[gd_scene load_steps=7 format=3 uid="uid://bh34o76f0de78"]

[ext_resource type="Theme" uid="uid://cy61b8kvmmaai" path="res://resources/stats_theme.tres" id="1_nlc43"]
[ext_resource type="Script" uid="uid://ngfn63nlr3xx" path="res://scenes/day_end/day_end.gd" id="2_hreyx"]
[ext_resource type="AudioStream" uid="uid://coyltecaoj8rx" path="res://assets/sounds/COMPUTER-KEYBOARD_GEN-HDF-08226.ogg" id="3_2efs6"]

[sub_resource type="Gradient" id="Gradient_nlc43"]
colors = PackedColorArray(0.163939, 0.0929236, 0.0377782, 1, 0.163939, 0.0929236, 0.0377782, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hreyx"]
gradient = SubResource("Gradient_nlc43")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2efs6"]
texture = SubResource("GradientTexture2D_hreyx")

[node name="DayEnd" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nlc43")
script = ExtResource("2_hreyx")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2efs6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RatingContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="DayLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RatingContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day ?? complete"

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RatingContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Average Score: ??%"

[node name="RatingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RatingContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rating: ??"

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="TotalLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Total visitors: "

[node name="AdmittedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Admitted:"

[node name="DeniedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Denied:"

[node name="CorrectLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Correct decisions:"

[node name="IncorrectLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Incorrect decisions:"

[node name="WeekSummaryContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="WeekSummaryGrid" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/WeekSummaryContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_search = false
auto_height = true
max_columns = 5
fixed_column_width = 150

[node name="NextDayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Next Day"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_2efs6")
